corrected spacing for open knowledge brasil link on topbar

--- a/app/packs/stylesheets/okbr/_nav.scss
+++ b/app/packs/stylesheets/okbr/_nav.scss
@@ -1,7 +1,11 @@
 #okbr-link {
-  margin: auto 1rem;
+  flex: 2 0 auto;
+  align-self: center;
 }
 
+.org-logo {
+  flex: 2 0 auto;
+}
 .navbar {
   background-color: white;
   color: black;
@@ -61,6 +65,7 @@
     }
     #okbr-link {
       margin: 1.2rem 0 0;
+      align-self: flex-start;
     }
 
     .okbr-search {
@@ -74,4 +79,15 @@
     .main-nav ul > li:not(:last-child) a {
       border-right: 0px;
     }
+}
+
+@media all and (max-width: 820px) {
+  .topbar > div.logo-wrapper {
+    flex-direction: column;
+  }
+
+  #okbr-link {
+    margin: 1.2rem 0 0;
+    align-self: flex-start;
+  }
 }
